--- a/PetMate/src/components/JanelaOng.css
+++ b/PetMate/src/components/JanelaOng.css
@@ -73,55 +73,57 @@
     border: 2px solid #654833;
     border-radius: 8px;
     padding: 15px;
-    margin-top: 3em;
+    margin-top: 5em;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    /* gap: 20px; */
 }
 
 .contato-redes {
     display: flex;
     justify-content: space-between;
-    gap: 10px;
-    padding: 0 100px;
+    gap: 00px;
+    padding: 0 50px;
+}
+.redesSociais-ong{
+    margin-right: 100px;
 }
 
 .contato-ong, .redesSociais-ong {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 10px;
-}
-.descricao-ong{
     
 }
 
-.contato-ong h3, .redesSociais-ong h3, .descricao-ong h3 {
+.contato-ong h3, .redesSociais-ong h3 {
     color: #654833;
-    margin-bottom: 10px;
+    font-size: 30px;
+}
+.descricao-ong h3{
+    margin-top: 50px;
+    margin-right: 50px;
+    color: #654833;
+    font-size: 30px;
 }
 
 .dados-ong p {
-    font-size: 16px;
-    margin: 5px 0;
+    font-size: 23px;
     color: black;
 }
 
 .iconeWhats{
     font-size: 25px;
-    margin-right: 3px;
     color: #654833;
     transform: translateY(5px);
 }
 .iconeInsta {
     font-size: 25px;
-    margin-right: 6px;
     color: #654833;
     transform: translateY(5px);
 }
 .iconeEmail {
     font-size: 25px;
-    margin-right: 6px;
     color: #654833;
     transform: translateY(5px);
 }
