--- a/PetMate/src/pages/Inicial.css
+++ b/PetMate/src/pages/Inicial.css
@@ -47,7 +47,6 @@
     height: 85px;
     width: 400px;
     margin-left: 1vw;
-    box-shadow: #000 0px 0px 1px;
 }
 
 .botoes-home button:hover {
@@ -63,6 +62,12 @@
     font-weight: 600;
     letter-spacing: .05em;
     color: #84644D;
+    transition: all 0.3s ease;
+}
+.botao-adotar:hover{
+    background-color: #DDD2C9;
+    transform: translateY(-2px);
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.15);
 }
 
 .botao-cadastrar {
@@ -74,8 +79,13 @@
     font-weight: 600;
     letter-spacing: .05em;
     color: #EBE5E0;
+    transition: all 0.3s ease;
 }
-
+.botao-cadastrar:hover{
+    background-color:#755742 ;
+    transform: translateY(-2px);
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.15);
+}
 .titulo-home {
     display: flex;
     flex-direction: column;
@@ -94,7 +104,46 @@
 .botao-swal-cancelar:hover {
     transition: 0.3s;
 }
-
+.info-cards {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 2rem 5%;
+  }
+  
+  .card-info {
+    background-color: #DDD2C9;
+    border: 1px solid #634833;
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 530px;
+    padding-top: 16px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+  }
+  
+  .card-info img {
+    width: 150px;
+    height: auto;
+    margin-left: 5px;
+    margin-top: auto;
+   
+    object-fit: contain;
+  }
+  
+  .texto-info h3 {
+    font-size: 1.5rem;
+    color: #634833;
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+  }
+  
+  .texto-info p {
+    font-size: 0.95rem;
+    color: #2e2217;
+    line-height: 1.4;
+  }
 @media (max-width: 1024px) {
     .texto-home h2 {
         font-size: 50px; /* Reduz tamanho do título */
