--- a/PetMate/src/components/ModalExcluirPet.css
+++ b/PetMate/src/components/ModalExcluirPet.css
@@ -1,43 +1,47 @@
-.modal-excluir-pet{
+.modal-excluir-pet {
     position: fixed;
     top: 0;
-    bottom: 0;
     left: 0;
-    right: 0;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(2px);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1000;
 }
-.container-excluir-pet{
+
+.container-excluir-pet {
+    background-color: #fff;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin: auto;
-    min-height: 40vh;
-    background-color: #FFFFFF;
-    border-radius: 10px;
-    width: 36vw;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    justify-content: center;
+    border-radius: 8px;
     padding: 20px;
-    padding-left: 50px;
-    padding-right: 50px;
+    width: 600px;
+    height: 300px;
+    max-width: 90%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
+.botoes-excluir-pet {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 10px;
+}
 
 .botao-modal-excluir-pet, .botao-modal-cancelar-pet {
-    font-size: 18px;
-    font-weight: 600;
-    padding: 10px 20px;
-    margin-left: 10px;
-    margin-top: 20px;
+    font-size: 1rem;
     border: none;
     cursor: pointer;
     border-radius: 5px;
-    height: 60px;
-    width: 150px;
-    transition: background-color 0.3s ease;
+    height: 50px;
+    width: 120px;
+    font-family: nunito;
+    transition: 0.3s ease;
 }
 
 .botao-modal-cancelar-pet{
@@ -50,37 +54,38 @@
     color: #333;
 }
 .botao-modal-excluir-pet:hover {
-    /* background-color: #6b4f3a; */
+    background-color: #b3aba5;
+    transition: 0.3s;
 }
 
 .botao-modal-cancelar-pet:hover {
-    background-color: #a67c5b;
+    background-color: #6e533f;
 }
 
 
 
-.Botao_Exclui{
+.botao-excluir-anuncio{
     margin-top: 20px;
     margin-right: 20px;
     padding: 10px;
 }
 
-.Botao_Exclui button{
+.botao-excluir-anuncio button{
     padding: 10px;
 }
 
 .texto-excluir-pet{
-    margin-top: 80px;
+    margin-top: 10px;
 }
 .texto-excluir-pet h1 {
-    font-size: 30px;
+    font-size: 1.5rem;
     color: #333;
     margin-bottom: 20px;
 }
 
 .texto-excluir-pet p{
     /* margin-top: 80px;  */
-    font-size: 24px;
+    font-size: 1.1rem;
     text-align: center;
     color: #333;
 }
