--- a/PetMate/src/components/ModalLogout.css
+++ b/PetMate/src/components/ModalLogout.css
@@ -5,6 +5,7 @@
     left: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(2px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,12 +17,11 @@
     align-items: center;
     justify-content: center;
     margin: auto;
-    min-height: 35vh;
+    min-height: 29vh;
     background-color: #FFFFFF;
     border-radius: 10px;
     width: 30vw;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    border: 3px solid #6b4f3a;
 }
 
 
@@ -33,52 +33,10 @@
     gap: 20px;
 }
 
-
-.botao-modal-excluir-conta, .botao-modal-cancelar-conta {
-    margin-bottom: 10px;
-    font-size: 18px;
-    font-weight: 600;
-    padding: 10px 20px;
-    margin-left: 10px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    height: 55px;
-    width: 150px;
-    transition: background-color 0.3s ease;
-}
-
-.botao-modal-cancelar-conta{
-    background-color: #84644D;
-    color: #EBE5E0;
-}
-.botao-modal-excluir-conta{
-    background-color: #EBE5E0;
-    border: 1px solid #6b4f3a;
-    color: #333;
-}
-.botao-modal-excluir-conta:hover {
-    /* background-color: #6b4f3a; */
-}
-
-.botao-modal-cancelar-conta:hover {
-    background-color: #a67c5b;
-}
-
-
-
-
 .texto_logout h1 {
-    font-size: 27px;
+    font-size: 1.5rem;
     color: #333;
     margin-bottom: 20px;
-}
-
-.texto_Exclui{
-    margin-top: 80px;
-    font-size: 20px;
-    text-align: center;
-    color: #333;
 }
 
 .botoes-logout{
@@ -89,30 +47,31 @@
 
 .botao-modal-logout,
 .botao-cancelar-logout{
-    font-size: 18px;
-    font-weight: 600;
-    padding: 10px 20px;
-    margin-left: 10px;
+    font-size: 1rem;
     border: none;
     cursor: pointer;
     border-radius: 5px;
-    height: 55px;
-    width: 150px;
-    transition: background-color 0.3s ease;
+    height: 50px;
+    width: 120px;
+    font-family: nunito;
+    transition: 0.3s ease;
 }
 
-
-.botao-modal-logout{
-    background-color: #EBE5E0;
-    color: #333;
-    border: 1px solid #6b4f3a;
-}
 
 .botao-cancelar-logout{
     background-color: #84644D;
     color: #EBE5E0;
 }
+.botao-modal-logout{
+    background-color: #EBE5E0;
+    border: 1px solid #6b4f3a;
+    color: #333;
+}
+.botao-modal-logout:hover {
+    background-color: #b3aba5;
+    transition: 0.3s;
+}
 
 .botao-cancelar-logout:hover {
-    background-color: #a67c5b;
+    background-color: #6e533f;
 }
