--- a/PetMate/src/components/PerfilOng.css
+++ b/PetMate/src/components/PerfilOng.css
@@ -87,7 +87,29 @@
     border-radius: 5px 0px 0px 5px;
 }
 
+.input-instagram-wrapper {
+    display: flex;
+    align-items: center;
+    width: 100%; /* Garante que o wrapper ocupe toda a largura */
+    height: 40px; /* Altura consistente com os outros inputs */
+    border: 1px solid #ccc; /* Bordas consistentes */
+    border-radius: 5px; /* Bordas arredondadas */
+    background-color: #fff; /* Fundo branco */
+    box-sizing: border-box; /* Inclui padding e borda no tamanho total */
+}
 
+.input-instagram-prefix {
+    padding: 0 10px; /* Espaçamento interno para o @ */
+    font-size: 16px; /* Tamanho da fonte */
+    color: #666; /* Cor do texto */
+    background-color: #f9f9f9; /* Fundo levemente diferente para destaque */
+    border-right: 1px solid #ccc; /* Borda separando o @ do input */
+    border-radius: 5px 0 0 5px; /* Bordas arredondadas apenas no lado esquerdo */
+    height: 100%; /* Altura igual ao wrapper */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .icon-cadeado{
     width: 38px;
@@ -100,6 +122,7 @@
     border-radius: 5px;
     border-radius: 0px 5px 5px 0px;
 }
+
 .icon-cadeado-sem-edicao{
     width: 38px;
     height: 40px;
